lib/src/compiler/tests/testdata/errors/134.out
error[E002]: wrong type
 --> line:3:4
  |
3 |    /foo/
  |    ^^^^^ expression should be `bool`, but it is a regexp
  |